Finalize tests and documentation.